some layout issues fixed

--- a/src/components/Create.scss
+++ b/src/components/Create.scss
@@ -1,4 +1,4 @@
-.create-page {
+.create-ctn {
     display: flex;
     justify-content: center;
     gap: 1em;
